[package]
name = "parse-gmusic-csv"
version = "0.1.0"
authors = ["Rasmus Eskola <fruitiex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
threadpool = "1.8.1"